samples/_failures_safe/1761270656_b63d6e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1cbf733f.c: In function ‘main’:
./samples/SAFE/__tmp_1cbf733f.c:155:5: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  155 |     for (size_t i
      |     ^~~
./samples/SAFE/__tmp_1cbf733f.c:155:5: error: expected declaration or statement at end of input
